[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.0"
chrono = {  version = "0.4.35", features = ["serde"] }
dioxus = { version = "0.5.0-alpha.0", features = ["web"] }
futures = "0.3.30"
reqwest = { version = "0.12.2", features=["json"] }
serde = "1.0.197" 
